<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chos_camera"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#ffffff"
        android:textColor="#000000"
        android:text="@string/dialog_pic"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#999999"
        />

    <TextView
        android:id="@+id/pic_lib"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#ffffff"
        android:textColor="#000000"
        android:text="@string/dialog_photo"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#999999"
        />

    <TextView
        android:id="@+id/dialog_btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#ffffff"
        android:textColor="#000000"
        android:text="@string/dialog_cancel"
        android:onClick="onClick"
        />

</LinearLayout>