<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="contentDescription">

    <RelativeLayout
        android:id="@+id/toppanel1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#F5F5F5"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_publish_title"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:onClick="onClick"
            android:text="@string/text_cancel"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toppanel1">

        <LinearLayout
            android:id="@+id/xml_push_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:onClick="onClick"
                    android:scaleType="fitXY"/>
                <TextView
                    android:id="@+id/tv_pic_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_camera"
                    android:gravity="center"
                    android:text="@string/text_publish_picture_setting"
                    android:textColor="#999999"
                    android:textSize="16sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/live_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#ffffff"
                    android:gravity="top"
                    android:hint="@string/text_publish_title_input"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#999999"
                    android:textSize="18sp"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#dcdcdc"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="#ffffff">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/img_lbs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:src="@drawable/icon_lbs_off"/>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/text_publish_lbs_off"
                        android:textSize="14sp"/>
                </LinearLayout>

                <com.ming.live_player.view.custom.CustomSwitch
                    android:id="@+id/btn_lbs"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:src="@drawable/btn_switch_off"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="#ffffff">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/iv_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/record_icon"/>

                    <TextView
                        android:id="@+id/tv_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/text_publish_no_record"
                        android:textSize="14sp"/>
                </LinearLayout>

                <com.ming.live_player.view.custom.CustomSwitch
                    android:id="@+id/btn_record"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:src="@drawable/btn_switch_off"/>
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#dcdcdc"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff">

                <RadioGroup
                    android:id="@+id/rg_record_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rb_record_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="摄像头直播"
                        android:textColor="#666666"/>

                    <RadioButton
                        android:id="@+id/rb_record_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="录屏直播"
                        android:textColor="#666666"/>
                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc"/>

            <RelativeLayout
                android:id="@+id/rl_bitrate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="#ffffff">

                <RadioGroup
                    android:id="@+id/rg_bitrate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rb_bitrate_slow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="流畅"
                        android:textColor="#666666"/>

                    <RadioButton
                        android:id="@+id/rb_bitrate_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="高清"
                        android:textColor="#666666"/>

                    <RadioButton
                        android:id="@+id/rb_bitrate_fast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="超清"
                        android:textColor="#666666"/>
                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="#dcdcdc"/>

            <TextView
                android:id="@+id/btn_publish"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="#0acaac"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/text_publish_start"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
